kubernetes/influxdb/overlays/k3s/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app.kubernetes.io/instance: influxdb
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`influxdb.k3s.<path:secret/data/homelab/domain#url>`)
      kind: Rule
      services:
        - name: influxdb
          port: 8086
